# opend6-koe-world-campaign

./: .gitignore  LICENSE  LICENSE.html  Makefile  README.rst  index.html  pyproject.toml
campaign_book_1/: Makefile  conf.py  index.html  index.rst  introduction.rst
fantasy_locations/: Makefile  conf.py  index.html  sections.py
fantasy_rulebook/: Combat.rst  Damage.rst  Equipment.rst  Healing.rst  Improving_Characters.rst  Introduction.rst  Makefile  Movement.rst  Reference.rst  Skill_Difficulties.rst  Templates.rst  armor.csv  conf.py  gear.csv  melee.csv  missiles.csv  shields.csv
forms/: .~lock.Fantasy Character 1.ods#  Fantasy Character 1.ods  char_sheet.aux  char_sheet.tex  char_sheet.toc  fastasy_character.aux  fastasy_character.tex
gm_ref/: conf.py  damage.rst  movement.rst
home_page/: conf.py  index.html
magic_guide/: Alternate.rst  Aspects.rst  Benchmarks.rst  In_Check.rst  Makefile  Potions.rst  Skills.rst  Spells.rst  conf.py  index.html  index.rst  sidebars.txt  spells.txt
notebooks/: Cantrip Workbook.ipynb  README.rst  Rank2 Workbook.ipynb  Rank3 Workbook.ipynb  Rank4 Workbook.ipynb  Rank5 Workbook.ipynb  Rank6 Workbook.ipynb  Rank8 Workbook.ipynb  correspondencies.ipynb  creatures.ipynb  fantasy_ALTERATION.ipynb  fantasy_CANTRIPS.ipynb  fantasy_CONJURATION.ipynb  fantasy_DIVINATION.ipynb  fantasy_Rank2.ipynb  fantasy_Rank3.ipynb  fantasy_Rank4.ipynb  fantasy_Rank5.ipynb  fantasy_dwarf.ipynb  fantasy_elf.ipynb  fantasy_gnome.ipynb  fantasy_holy_items.ipynb  fantasy_items.ipynb  fantasy_miracle_DIVINATION.ipynb  fantasy_miracle_FAVOR.ipynb  (+14 more)
(+1351 files in other folders)
